# mMusicPlayer

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: .eslintrc  App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  mpd_fn.rs  ws.rs
src/assets/: main.css  style.css
src/components/: HomeFooter.vue  HomeHeader.vue  HomeSider.vue
src/router/: index.ts
src/store/: store.ts
src/types/: mpd.d.ts
src/views/: Home.vue  Songs.vue
