[package]
name = "m_music_player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [] }
mpd = { version = "0.1.0", features = ["serde"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio = { version ="1.35.1", features = ["full"] }
log = "0.4.20"
futures-util = "0.3.30"
env_logger = "0.10.1"
lazy_static = "1.4.0"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-websocket = "2.0.0-alpha.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
