[package]
name = "m_music_player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [] }
mpd = { version = "0.1.0", features = ["serde"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
futures-util = "0.3.30"
env_logger = "0.10.1"
lazy_static = "1.4.0"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-websocket = "2.0.0-alpha.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
